--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skater Stats</title>
+    <meta name="description" content="Figure Skating Statistics and Results" />
+    <meta name="theme-color" content="#2B6CB0" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
