--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skater Stats</title>
     <meta name="description" content="Figure Skating Statistics and Results" />
-    <meta name="theme-color" content="#2B6CB0" />
+    <meta name="theme-color" content="#EBF5FF" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <style>
+      /* Override iOS pull-to-refresh color */
+      body {
+        background-color: #EBF5FF;
+      }
+    </style>
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <script type="text/javascript">
