--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Skater Stats</title>
-    <meta name="description" content="Figure Skating Statistics and Results" />
+    <title>Skater Stats - Figure Skating Statistics and Analysis</title>
+    <meta name="description" content="Comprehensive figure skating statistics, competition results, and performance analysis for figure skating events." />
+    <meta name="keywords" content="figure skating, skating statistics, competition results, figure skating analysis" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Skater Stats - See you competition trends and history!" />
+    <meta property="og:description" content="Comprehensive figure skating statistics, competition results, and performance analysis." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://skater-stats.com/" />
     <meta name="theme-color" content="#EBF5FF" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
