--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>Skater Stats - Figure Skating Statistics and Analysis</title>
     <meta name="description" content="Comprehensive figure skating statistics, competition results, and performance analysis for figure skating events." />
     <meta name="keywords" content="figure skating, skating statistics, competition results, figure skating analysis" />
