--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <title>Skater Stats - Figure Skating Statistics and Analysis</title>
-    <meta name="description" content="Comprehensive figure skating statistics, competition results, and performance analysis for figure skating events." />
-    <meta name="keywords" content="figure skating, skating statistics, competition results, figure skating analysis" />
+    <title>Skater Stats - See your past scores and get live updates</title>
+    <meta name="description" content="See your past scores and get live updates for figure skating events." />
+    <meta name="keywords" content="figure skating, skating statistics, competition results, figure skating analysis, live event updatea" />
     <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="Skater Stats - See you competition trends and history!" />
-    <meta property="og:description" content="Comprehensive figure skating statistics, competition results, and performance analysis." />
+    <meta property="og:title" content="Skater Stats - See you competition history and get live event updates!" />
+    <meta property="og:description" content="See your past scores and get live updates for figure skating events." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://skater-stats.com/" />
     <meta name="theme-color" content="#EBF5FF" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
       /* Override iOS pull-to-refresh color */
       body {
