--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
+    <meta name="app-version" content="1.0.1" />
     <title>Skater Stats - See your past scores and get live updates</title>
     <meta name="description" content="See your past scores and get live updates for figure skating events." />
     <meta name="keywords" content="figure skating, skating statistics, competition results, figure skating analysis, live event updatea" />
@@ -42,6 +43,26 @@
           );
         }
       }(window.location))
+    </script>
+    <script>
+      window.clearServiceWorkerCache = async function() {
+        if ('serviceWorker' in navigator) {
+          const registrations = await navigator.serviceWorker.getRegistrations();
+          for (const registration of registrations) {
+            await registration.unregister();
+          }
+          
+          if ('caches' in window) {
+            const cacheKeys = await caches.keys();
+            await Promise.all(cacheKeys.map(key => caches.delete(key)));
+          }
+          
+          alert('Cache cleared. Reloading page...');
+          window.location.reload(true);
+          return true;
+        }
+        return false;
+      };
     </script>
     %ENV_GOOGLE_ANALYTICS%
   </head>
