--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="icon" href="/favicon.ico?v=2" />
     <link rel="icon" href="/favicon-16x16.png?v=2" sizes="16x16" type="image/png" />
     <link rel="icon" href="/favicon-32x32.png?v=2" sizes="32x32" type="image/png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png?v=2" sizes="180x180" />/>
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png?v=2" sizes="180x180" />
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
